# git-cat

./: Cargo.toml
src/: cli.rs  main.rs  model.rs
