[package]
name = "git-cat"
version = "0.1.0"
authors = ["takahashi-masaki"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
home = "0.5"
git2 = "0.18"
chrono = "0.4"
crossterm = "0.25"
ratatui = "0.20"
